--- a/luffy.html
+++ b/luffy.html
@@ -7,13 +7,42 @@ body {font-family:verdana; background-color:tomato;}
 </style>
 </head>
 
-<h1 style="font-size:72px; color:white;" title="luffy page;"> Luffy Page </h1>
+<h1 style="font-size:72px; color:white;" title="luffy page;"> Luffy Page
+
+<img src="strawhat.png" width="72" height="72">
+
+</h1>
+
+
+<nav>
+
+<table style="font-size:25px; width:50%; border: 1px solid black; border-collapse: collapse; position: absolute; top: 80px; left: 550px;">
+<tr>
+<td style="border: 2px solid black; border-collapse: collapse;" ><a href="index.html"> Goku </a>
+<td style="border: 2px solid black; border-collapse: collapse;"><a href="mash.html">Naruto</td>
+<td style="border: 2px solid black; border-collapse: collapse;"><a href="mash.html">Mash</td>
+</tr>
+</table>
 <hr>
 
-<a href="https://youtu.be/h36oAI9N994?si=ooR8YkQJ0vgaEQpb">Watch Luffy Here</a><br>
+</nav>
 
-<a href="goku.html"><b>to goku</b></a>
+
+<h1 style="text-align:center; border:2px solid black;" title="zowie"> About Luffy </h1>
+<p><b> ore wa monkey d luffy </b></p>
+<table>
+<td style="border: 2px solid black; border-radius: 10px;"> <a href="https://youtu.be/h36oAI9N994?si=ooR8YkQJ0vgaEQpb" target="_blank">Watch Luffy Here</a> </td>
+</table>
 <br>
-<img src="luffy.jpeg" width="1500" height="250">
+<hr>
+
+
+<h1 style="text-align:center; border:2px solid black;" title="wowie"> About Zoro </h1>
+<p><b> where the hell am i</b></p>
+<hr>
+
+<br>
+<h1 style="font-family:courier;"> share if you fw luffy </h1>
+<img src="luffy.jpeg" width="8500" height="9999">
 
 </html>
